Обновить кабинет водителя и состав поставки
